<resources>
    <string name="app_name">Address Book Deitel</string>
    <string name="label_name">Nama:</string>
    <string name="label_phone">Telefon:</string>
    <string name="label_email">Emel:</string>
    <string name="label_street">Jalan:</string>
    <string name="label_city">Bandar:</string>
    <string name="label_address">Alamat</string>
    <string name="label_save_contact">Simpan</string>
    <string name="menuitem_add_contact">Tambah kenalan</string>
    <string name="menuitem_edit_contact">Edit kenalan</string>
    <string name="menuitem_delete_contact">Padam kenalan</string>
    <string name="errorTitle">Ralat</string>
    <string name="errorMessage">Tidak dapat simpan.</string>
    <string name="errorButton">OK</string>
    <string name="hint_name">Masukkan nama</string>
    <string name="hint_phone">Masukkan nombor tel</string>
    <string name="hint_street">Nama jalan</string>
    <string name="hint_city">Nama bandar</string>
    <string name="menuitem_receive_contact">Terima bluetooth</string>
    <string name="title_other_devices">Peranti ditemui</string>
    <string name="button_scan">Scan</string>
    <string name="no_bluetooth">Tiada peranti ditemui.</string>
    <string name="bluetooth_enabled">Bluetooth on</string>
    <string name="no_discoverability">Tidak ditemui</string>
    <string name="waiting_contact">menunggu..</string>
    <string name="contact_not_received">Kenalan tak diterima</string>
    <string name="contact_received">Kenalan diterima</string>
    <string name="connection_error">Error sambungan</string>
    <string name="sending_contact">Menghantar kenalan</string>
    <string name="contact_sent">Kenalan dihantar</string>
    <string name="transfer_failed">Gagal menghantar</string>
    <string name="menuitem_transfer_contact">Bluetooth kenalan</string>
    <string name="button_cancel">Kensel</string>
    <string name="button_delete">Padam</string>
    <string name="confirmTitle">Padam kenalan ini</string>
    <string name="confirmMessage">Akan memadam kenalan ini.</string>
    <string name="no_devices">Tiada peranti</string>
    <string name="choose_device">Pilih peranti</string>
</resources>
