<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/view_contact_toolbar"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/view_contact_toolbar">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="5dp">

        <TableRow android:id="@+id/nameTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/nameLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_name"/>
            <TextView android:id="@+id/nameTextView"
                style="@style/ContactTextView"/>
        </TableRow>
        <TableRow android:id="@+id/phoneTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/phoneLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_phone"/>
            <TextView android:id="@+id/phoneTextView"
                style="@style/ContactTextView"/>
        </TableRow>
        <TableRow android:id="@+id/emailTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/emaiLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_email"/>
            <TextView android:id="@+id/emailTextView"
                style="@style/ContactTextView"/>
        </TableRow>
        <TableRow android:id="@+id/streetTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/streetLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_street"/>
            <TextView android:id="@+id/streetTextView"
                style="@style/ContactTextView"/>
        </TableRow>
        <TableRow android:id="@+id/cityTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/cityLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_city"/>
            <TextView android:id="@+id/cityTextView"
                style="@style/ContactTextView"/>
        </TableRow>
    </TableLayout>
    </ScrollView>

</RelativeLayout>